# scheduler

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
data/: scheduler.db-shm  scheduler.db-wal
migrations/: 202301010001_initial_schema.sql
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/: dto.rs  mod.rs  tests.rs
src/db/: mod.rs  queries.rs  tests.rs
src/domain/: mod.rs
src/scheduler/: mod.rs
src/service/: mod.rs  tests.rs
src/tests/: e2e.rs
static/: index.html
