[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.4.3", features = ["serde", "v4"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
dotenvy = "0.15.7"
anyhow = "1.0.100"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = "0.8.7"
tower-http = { version = "0.6.7", features = ["trace"] }
tokio-util = { version = "0.7.17", features = ["full"] }
